prusti-tests/tests/verify/ui/predicates/abstract-predicate-dont-call.stderr
error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/abstract-predicate-dont-call.rs:25:9
   |
25 |         self.x.foo();
   |         ^^^^^^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/abstract-predicate-dont-call.rs:6:9
   |
6  |         fn foo(&self) -> bool;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/abstract-predicate-dont-call.rs:30:5
   |
30 |     x.foo();
   |     ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/abstract-predicate-dont-call.rs:6:9
   |
6  |         fn foo(&self) -> bool;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/abstract-predicate-dont-call.rs:35:13
   |
35 |     assert!(s.foo());
   |             ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/abstract-predicate-dont-call.rs:6:9
   |
6  |         fn foo(&self) -> bool;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

